infra/sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: search-route
  namespace: crackdeal-ns
spec:
  gateways:
  - crackdeal-gateway
  hosts:
   - "*"
  http:
  - name: search-stable-route
    match:
    - uri:
        prefix: /search/v1/
    route:
    - destination:
        host: search-srv.crackdeal-ns.svc.cluster.local
        subset: stable
        port:
          number: 8082
  - name: search-canary-route
    route:
    - destination:
        host: search-srv.crackdeal-ns.svc.cluster.local
        subset: canary
        port:
          number: 8082        
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: search-destination
  namespace: crackdeal-ns
spec:
  host: search-srv.crackdeal-ns.svc.cluster.local
  subsets:
  - name: stable
    labels:
      version: "1.0.0"
  - name: canary
    labels:
      version: "1.1.0"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
